# arxd

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/arxd/: actions.py  arxd.py  config.py  constants.py  main.py  utils.py
src/arxd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: test_arxd.py  test_utils.py
