[project]
name = "arxd"
description = "Extract (and delete) archive files under present working directory."
readme = "README.md"
license = {file = "LICENSE"}
version = "3.1.0"
classifiers = [
  "Private :: Do Not Upload"
]
authors = [
  {name = "Muhammad Altaaf", email = "taafuuu@gmail.com"}
]
dependencies = [
  "rich"
]


[project.scripts]
arxd = "arxd.main:main"
